--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,6 +48,15 @@
                         </div>
                     </div>
                 </div>
+                <footer class="p-4 bg-white rounded shadow-md md:flex md:items-center md:justify-between md:p-6 container w-full max-w-md">
+                    <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">Made with hate by <a href="https://spin.rip/" class="hover:underline" target="_blank">Spinfal</a>
+                    </span>
+                    <ul class="flex flex-wrap items-center mt-3 sm:mt-0">
+                        <li>
+                            <a href="https://github.com/spinfal/cdn-slave" class="text-sm text-gray-500 hover:underline dark:text-gray-400" target="_blank">Source Code</a>
+                        </li>
+                    </ul>
+                </footer>
             </div>
         </div>
     </body>
