Fix some issues

--- a/views/results.ejs
+++ b/views/results.ejs
@@ -4,6 +4,16 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+        <meta property="og:type" content="website" />
+        <meta name="title" content="CDN Slave" />
+        <meta name="description" content="Upload to Discord's CDN without needing their app." />
+        <meta name="robots" content="index, nofollow" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta name="language" content="English" />
+        <meta name="author" content="Spinfal" />
+        <meta property="og:image" content="https://us-east-1.tixte.net/uploads/cdn.spin.rip/a74ef551-7e0e-4f99-9e2f-f5227466d44b.png" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:image" content="https://us-east-1.tixte.net/uploads/cdn.spin.rip/a74ef551-7e0e-4f99-9e2f-f5227466d44b.png" />
         <title>CDN Slave</title>
         <script src="https://cdn.tailwindcss.com"></script>
         <style type="text/tailwindcss">
