--- a/views/results.ejs
+++ b/views/results.ejs
@@ -81,9 +81,9 @@
                         <div class="flex flex-col items-center">
                             <div class="-mx-3 mb-3">
                                 <div class="px-3 md:mb-0 text-center">
-                                    <p class="break-all mb-6">CDN URL: <a class="text-blue-700" href="<%= url %>" rel="noreferrer" target="_blank">view</a></p>
+                                    <p class="break-all mb-6">CDN URL: <a class="text-blue-700 hover:underline decoration-dotted" href="<%= url %>" rel="noreferrer" target="_blank">view</a></p>
 <!--                                     <p class="break-all">Proxy URL: <a class="text-blue-700" href="<%= proxyURL %>" rel="noreferrer" target="_blank">view</a></p> -->
-                                    <div class="tooltip">Proxy URL: <a class="text-blue-700" href="<%= proxyURL %>" rel="noreferrer" target="_blank">view</a>
+                                    <div class="tooltip">Proxy URL: <a class="text-blue-700 hover:underline decoration-dotted" href="<%= proxyURL %>" rel="noreferrer" target="_blank">view</a>
                                         <span class="tooltiptext">Media URL may not be availble for all files</span>
                                     </div>
                                 </div>
@@ -96,7 +96,7 @@
                     </span>
                     <ul class="flex flex-wrap items-center mt-3 sm:mt-0">
                         <li>
-                            <a href="https://duckduckgo.com/?q=<%= fileType %>ta"><p class="text-sm text-gray-500 sm:text-center dark:text-gray-400"><%= fileType %></p></a>
+                            <a href="https://duckduckgo.com/?q=<%= fileType %>" target="_blank" rel="noreferrer"><p class="text-sm text-gray-500 sm:text-center dark:text-blue-400 hover:underline decoration-dotted"><%= fileType %></p></a>
                         </li>
                     </ul>
                 </footer>
