CDN Slave can now be used with ShareX

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,9 +11,9 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="language" content="English" />
         <meta name="author" content="Spinfal" />
-        <meta property="og:image" content="https://us-east-1.tixte.net/uploads/cdn.spin.rip/a74ef551-7e0e-4f99-9e2f-f5227466d44b.png" />
+        <meta property="og:image" content="https://cdn.spin.rip/r/4EBFE1B7-D38B-421D-9289-EA85676DDF37.jpeg" />
         <meta property="twitter:card" content="summary_large_image" />
-        <meta property="twitter:image" content="https://us-east-1.tixte.net/uploads/cdn.spin.rip/a74ef551-7e0e-4f99-9e2f-f5227466d44b.png" />
+        <meta property="twitter:image" content="https://cdn.spin.rip/r/4EBFE1B7-D38B-421D-9289-EA85676DDF37.jpeg" />
         <link rel="icon" href="/favicon.ico" />
         <title>CDN Slave</title>
         <script src="https://cdn.tailwindcss.com"></script>
@@ -87,7 +87,7 @@
                     button.classList.add("bg-gray-500");
                     button.disabled = true;
                     button.innerText = "Uploading...";
-                    setTimeout(() => button.innerText = "Must be a big file...", 9000);
+                    setTimeout(() => button.innerText = "Must be a big file...", 6500);
                 }
             });
         </script>
