stop using dev tailwind
moved to prod tailwind file -> index.css

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
         <meta property="twitter:image" content="https://cdn.spin.rip/r/4EBFE1B7-D38B-421D-9289-EA85676DDF37.jpeg" />
         <link rel="icon" href="/favicon.ico" />
         <title>CDN Slave</title>
-        <script src="https://cdn.tailwindcss.com"></script>
+        <link rel="stylesheet" href="css/index.css" />
         <style type="text/tailwindcss">
             @layer utilities {
                 body {
