--- a/views/results.ejs
+++ b/views/results.ejs
@@ -15,7 +15,7 @@
         <meta property="twitter:card" content="summary_large_image" />
         <meta property="twitter:image" content="https://us-east-1.tixte.net/uploads/cdn.spin.rip/a74ef551-7e0e-4f99-9e2f-f5227466d44b.png" />
         <title>CDN Slave</title>
-        <script src="https://cdn.tailwindcss.com"></script>
+        <link rel="stylesheet" href="css/index.css" />
         <style type="text/tailwindcss">
             @layer utilities {
                 body {
