--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,10 +42,12 @@
                             <a href="https://blog.spin.rip/discord-cdn-changes/" target="_blank" class="mt-2 inline-block text-red-500 hover:text-red-600 px-2 py-1 bg-red-200 hover:bg-red-300 rounded-md cursor-pointer"><strong>IMPORTANT ANNOUNCEMENT</strong></a>
                         </div>
                         <form id="upload-form" enctype="multipart/form-data" class="flex flex-col items-center px-8">
-                            <label for="file" id="fileLabel" class="block shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline cursor-pointer">Choose a file</label>
-                            <input onchange="window.label.innerText = this.files[0].name" type="file" name="file" id="file" class="hidden" required>
-                            <p class="text-gray-700/75 text-sm mt-1"><em>Maximum file size: ~<%= humanFileSize %></em></p>
-                            <button type="button" id="upload-btn" class="mt-4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline w-1/2">Upload</button>
+                            <label for="file" id="fileLabel" class="block shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">Choose a file</label>
+                            <input onchange="window.label.innerText = this.files[0].name" type="file" name="file" id="file" class="hidden">
+                            <p class="text-gray-700/75 text-sm mt-1 mb-2"><em>Maximum file size: ~<%= humanFileSize %></em></p>
+                            <p class="text-gray-400/75">or</p>
+                            <input type="number" name="mid" id="mid" placeholder="message id" class="block shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline cursor-pointer">
+                            <button type="button" id="upload-btn" class="mt-4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline w-1/2">Go</button>
                             <p class="text-red-800 text-sm mt-2">I can see everything you upload, don't be dumb</p>
                             <!-- Progress Bar -->
                             <div class="mt-3 w-full bg-gray-300 rounded">
@@ -80,20 +82,21 @@
             const progressBar = document.getElementById("progress-bar");
             window.label = document.getElementById("fileLabel");
 
-            uploadBtn.addEventListener('click', function () {
-                const fileInput = document.getElementById('file');
-                const file = fileInput.files[0];
-                if (!file) {
+            uploadBtn.addEventListener("click", function () {
+                const fileInput = document.getElementById("file");
+                const mid = document.getElementById("mid");
+                const file = fileInput?.files[0];
+                if (!file && !mid) {
                     return;
                 }
-                if (file.size >= <%= byteFileSize %>) {
-                    return tip.innerText = "Your file is over <%= humanFileSize %>!";
+                if (file && file.size >= <%= byteFileSize %>) {
+                    return alert("Your file is over <%= humanFileSize %>!");
                 }
                 uploadBtn.classList.remove("bg-blue-500");
                 uploadBtn.classList.remove("hover:bg-blue-700");
                 uploadBtn.classList.add("bg-gray-500");
                 uploadBtn.disabled = true;
-                uploadBtn.innerText = "Uploading...";
+                uploadBtn.innerText = "Please wait...";
                 setInterval(() => uploadBtn.innerText = phrases[Math.floor(Math.random() * phrases.length)], 7000);
 
                 let formData = new FormData(uploadForm);
