--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,7 +39,7 @@
                         <div class="mb-4 text-center">
                             <h1 class="text-2xl font-semibold">CDN Slave</h1>
                             <p class="text-gray-700 text-sm">Because Discord is our new CDN slave</p>
-                            <a href="https://blog.spin.rip/discord-cdn-changes/" target="_blank" class="mt-2 inline-block text-red-500 hover:text-red-600 px-2 py-1 bg-red-200 hover:bg-red-300 rounded-md cursor-pointer"><strong>IMPORTANT ANNOUNCEMENT</strong></a>
+                            <a href="https://blog.spin.rip/p/discord-cdn-changes" target="_blank" class="mt-2 inline-block text-red-500 hover:text-red-600 px-2 py-1 bg-red-200 hover:bg-red-300 rounded-md cursor-pointer"><strong>CDN-SLAVE UPDATES</strong></a>
                         </div>
                         <form id="upload-form" enctype="multipart/form-data" class="flex flex-col items-center px-8">
                             <label for="file" id="fileLabel" class="block shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">Choose a file</label>
